# oreyowa-cardgame

./: pyproject.toml  readme.md  requirements.txt
app/: __init__.py  game_logic.py  routes.py
app/static/: main.js  style.css
app/templates/: index.html
