[tool.poetry]
name = "oretachihayowainocardgame"
version = "0.1.0"
description = ""
authors = ["Kuchiki <ykuchiki0827@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
